# Optimizing_Vibrating_Plates

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
configs/: flow_matching_config.json
configs/_modular/: D50k_15.yaml  optimizer.yaml  scheduler.yaml
configs/fem/: plate_template.inp
configs/regression/: 10k15.yaml  25k15.yaml  2_5k15.yaml  50k15.yaml  5k15.yaml
notebooks/: evaluate_regression.ipynb  run_guided_fm_design_optimization.ipynb  simulate_plate_via_fem.ipynb  test_pattern_generation.ipynb  view_dataset.ipynb
plate_optim/: fem_call.py  genetic_opt.py  guided_flow.py  pattern_generation.py  project_directories.py  random_search.py
plate_optim/flow_matching/: README.md  evaluation.py  run.py  train.py  train_plates.py
plate_optim/flow_matching/models/: nn.py  unet.py
plate_optim/metrics/: manufacturing.py
plate_optim/regression/: data.py  nn.py  regression_model.py  run.py  train.py
plate_optim/utils/: abaqus_extract_velocity.py  abaqus_helper.py  data.py  guidance.py  logging.py  plotting.py  softlocalmax.py  training.py
scripts/: fem_call.sh  range100_200.sh  range200_250.sh  run_all.sh  setting_a_args.sh  setting_b_args.sh
scripts/experiment_scripts/: ablate_dataset_size.sh  ablate_dataset_size_.sh  ablate_grad_norm.sh  ablate_postprocessing.sh  run_flow_matching.sh  run_fm_first_peak.sh  run_genetic_opt.sh  run_random_search.sh  sweep_alpha.sh  sweep_stepsize.sh
scripts/flow_matching/: standard.sh
scripts/regression/: 10k15.sh  25k15.sh  50k15_075noise.sh  50k15_noisefree.sh  5k15.sh
